增加使用ByteArrayBuilder解码http协议的逻辑